--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/eksilva/rabbitPractice#readme",
   "dependencies": {
+    "amqplib": "^0.8.0",
     "express": "^4.17.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
